Halt in flashdumper

--- a/openocd/flash.cfg
+++ b/openocd/flash.cfg
@@ -13,6 +13,7 @@ reg pc [mrw 0x20000004]
 echo "Continuing, wait ca. 10 seconds"
 resume
 sleep 10000
+halt
 echo "Dumping"
 dump_image backups/flash_backup.bin 0x24000000 1048576
 echo "Done!"
